Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6502

CONNECT: misleading error "table defined on itself"

    XMLWordPrintable

Details

    Description

      I issued something like this:

      MariaDB [test]> CREATE OR REPLACE TABLE target (id INT PRIMARY KEY) ENGINE = InnoDB;
      Query OK, 0 rows affected (0.44 sec)
       
      MariaDB [test]> CREATE OR REPLACE TABLE xyzzy
          -> ENGINE = CONNECT
          -> TABLE_TYPE = MYSQL
          -> CONNECTION = 'root:root@127.0.0.1/test/target'
          -> ;
      ERROR 1105 (HY000): This MySQL table is defined on itself

      I forgot "mysql://" in CONNECTION, but the error is misleading.

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            f_razzoli Federico Razzoli
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.